<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/menu_new"
        android:title="@string/newparkingspotmenu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_change"
        android:title="@string/changepakringspotmenu"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_reservation"
        android:title="@string/reservationsmenu"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_info"
        android:title="@string/info"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>