<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.hesso.parkingspot.android.RegisterActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/regLogin"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/regFirstname"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/firstname"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/regLastname"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/lastname"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"/>
        <EditText
            android:id="@+id/regAddress"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/address"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/regPhone"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phone"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/regEmail"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/regButtonRegister"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:ems="10"
            android:text="@string/register"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:onClick="sendRegButtonRegister"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>