<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.hesso.parkingspot.android.RentActivity">




    <TextView
        android:id="@+id/textView1"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:text="@string/provider"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:text="@string/address"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/plz_city"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/price_day"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/showprovider"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text=""
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@+id/textView1"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/showaddress"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showprovider" />

    <TextView
        android:id="@+id/showlocation"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showaddress" />

    <TextView
        android:id="@+id/showprice"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showlocation" />

    <Button
        android:id="@+id/button1"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="@string/rent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        android:onClick="sendRentButton"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>
