<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.hesso.parkingspot.android.MainActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/lblLogin"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:ems="10"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/lblFirstname"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:ems="10"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/lblLastname"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:ems="10"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/lblAddress"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:ems="10"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:ems="10"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/lblPhone"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:ems="10"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />


    <Button
        android:id="@+id/btnMap"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:ems="10"
        android:text="@string/map"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="sendMapButton"/>

    <Button
        android:id="@+id/btnChange"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:ems="10"
        android:text="@string/change_delete"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="sendChangeButton"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:ems="10"
        android:text="@string/logout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="sendLogoutButton"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
